<resources>
    <string name="app_name">Multi Notes</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="add_image">Add Image</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="add_url">Add Url</string>
    <string name="enter_url">Enter Url</string>
    <string name="add">Add</string>
    <string name="reminder_note">Add Reminder</string>
    <string name="set_time">Set Time</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="select_time">Select Time</string>
</resources>